--- a/site/pages/v4/accessibility/applicability-en.hbs
+++ b/site/pages/v4/accessibility/applicability-en.hbs
@@ -12,8 +12,8 @@
   <h2 class="page-header">1. Perceivable</h2>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#text-equiv-all" rel="external">1.1.1 Non-text content</a></h3>
   <ul>
-   <li><a href="guide-en.html#img">Images</a></li>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#images">Images</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
    <li>Video</li>
    <li>Audio</li>
   </ul>
@@ -41,10 +41,10 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#content-structure-separation-programmatic" rel="external">1.3.1 Info and Relationships</a></h3>
   <ul>
-   <li><a href="guide-en.html#tbl">Tables</a></li>
-   <li><a href="guide-en.html#frm">Forms</a></li>
-   <li><a href="guide-en.html#hdg">Headings</a></li>
-   <li><a href="guide-en.html#qlg">Quotations</a></li>
+   <li><a href="guide-en.html#tables">Tables</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
+   <li><a href="guide-en.html#headings">Headings</a></li>
+   <li><a href="guide-en.html#quot">Quotations</a></li>
    <li>Lists</li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#content-structure-separation-sequence" rel="external">1.3.2 Meaningful Sequence</a></h3>
@@ -75,8 +75,8 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#visual-audio-contrast-text-presentation" rel="external">1.4.5 Images of Text</a></h3>
   <ul>
-   <li><a href="guide-en.html#img">Images</a></li>
-   <li>Forms using <a href="guide-en.html#img">Images</a></li>
+   <li><a href="guide-en.html#images">Images</a></li>
+   <li>Forms using <a href="guide-en.html#images">Images</a></li>
   </ul>
  </div>
  <div class="col-md-6">
@@ -95,7 +95,7 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#time-limits-required-behaviors" rel="external">2.2.1 Timing Adjustable</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
    <li>Web Applications</li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#time-limits-pause" rel="external">2.2.2 Pause, Stop, Hide</a></h3>
@@ -112,11 +112,11 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-skip" rel="external">2.4.1 Bypass Blocks</a></h3>
   <ul>
-   <li><a href="guide-en.html#lin">Links</a></li>
+   <li><a href="guide-en.html#links">Links</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-title" rel="external">2.4.2 Page Titled</a></h3>
   <ul>
-   <li><a href="guide-en.html#hdg">Page Title</a></li>
+   <li><a href="guide-en.html#headings">Page Title</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-focus-order" rel="external">2.4.3 Focus Order</a></h3>
   <ul>
@@ -125,16 +125,16 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-refs" rel="external">2.4.4 Link Purpose (In Context)</a></h3>
   <ul>
-   <li><a href="guide-en.html#lin">Links</a></li>
+   <li><a href="guide-en.html#links">Links</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-mult-loc" rel="external">2.4.5 Multiple ways</a></h3>
   <ul>
-   <li><a href="guide-en.html#lin">Links</a></li>
+   <li><a href="guide-en.html#links">Links</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-descriptive" rel="external">2.4.6 Headings and Labels</a></h3>
   <ul>
-   <li><a href="guide-en.html#hdg">Headings</a></li>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#headings">Headings</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#navigation-mechanisms-focus-visible" rel="external">2.4.7 Focus Visible</a></h3>
   <ul>
@@ -148,11 +148,11 @@
   <h2 class="page-header">3. Understandable</h2>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#meaning-doc-lang-id" rel="external">3.1.1 Language of Page</a></h3>
   <ul>
-   <li><a href="guide-en.html#qlg">HTML element</a></li>
+   <li><a href="guide-en.html#quot">HTML element</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#meaning-other-lang-id" rel="external">3.1.2 Language of Parts</a></h3>
   <ul>
-   <li><a href="guide-en.html#qlg">Quotations</a></li>
+   <li><a href="guide-en.html#quot">Quotations</a></li>
    <li>Any content where a change of natural language occurs</li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#consistent-behavior-receive-focus" rel="external">3.2.1 On Focus</a></h3>
@@ -166,28 +166,28 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#consistent-behavior-consistent-locations" rel="external">3.2.3 Consistent Navigation</a></h3>
   <ul>
-   <li><a href="guide-en.html#lin">Links</a></li>
+   <li><a href="guide-en.html#links">Links</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#consistent-behavior-consistent-functionality" rel="external">3.2.4 Consistent Identification</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
-   <li><a href="guide-en.html#lin">Links</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
+   <li><a href="guide-en.html#links">Links</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#minimize-error-identified" rel="external">3.3.1 Error Identification</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#minimize-error-cues" rel="external">3.3.2 Labels or Instructions</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#minimize-error-suggestions" rel="external">3.3.3 Error Suggestion</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#minimize-error-reversible" rel="external">3.3.4 Error Prevention (Legal, Financial, Data)</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
  </div>
  <div class="col-md-6">
@@ -198,7 +198,7 @@
   </ul>
   <h3 class="h4"><a href="http://www.w3.org/TR/WCAG20/#ensure-compat-rsv" rel="external">4.1.2 Name, Role, Value</a></h3>
   <ul>
-   <li><a href="guide-en.html#frm">Forms</a></li>
+   <li><a href="guide-en.html#forms">Forms</a></li>
   </ul>
  </div>
 </div>
