--- a/site/pages/v4/design/colour-en.hbs
+++ b/site/pages/v4/design/colour-en.hbs
@@ -4,105 +4,131 @@
 	"language": "en",
 	"altLangPrefix": "colour",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-03"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#default">Default appearance </a></li>
-      <li><a href="#text">Coloured text</a></li>
-      <li><a href="#background">Coloured backgrounds</a></li>
-      <li><a href="#message">Coloured message boxes</a></li>
-      <li><a href="#tables">Coloured tables</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4 pull-right">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
-    </ul>
-   </div>
-  </div>
- </div>
- <h2 class="page-header" id="description">Description</h2>
- <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
- <h2 class="page-header" id="default">Default appearance</h2>
- <p>(Info goes here) </p>
- <h2 class="page-header" id="text">Coloured text</h2>
- <p>Use font colours to highlight content and / or create information blocks that focus the user's attention.</p>
- <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
- <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
- <p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
- <p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
- <p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
- <p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
- <div class="mrgn-tp-lg">
-  <pre><code>&lt;p class=&quot;text-muted&quot;&gt;...&lt;/p&gt;
-&lt;p class=&quot;text-primary&quot;&gt;...&lt;/p&gt;
-&lt;p class=&quot;text-success&quot;&gt;...&lt;/p&gt;
-&lt;p class=&quot;text-info&quot;&gt;...&lt;/p&gt;
-&lt;p class=&quot;text-warning&quot;&gt;...&lt;/p&gt;
-&lt;p class=&quot;text-danger&quot;&gt;...&lt;/p&gt;
-</code></pre>
- </div>
- <div class="alert alert-info mrgn-tp-lg">
-  <h4>Dealing with specificity</h4>
-  <p>Sometimes emphasis classes cannot be applied due to the specificity of another selector. In most cases, a sufficient workaround is to wrap your text in a <code>&lt;span&gt;</code> with the class.</p>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <h2 class="page-header" id="background">Coloured backgrounds</h2>
- <p>Similar to the contextual text color classes, easily set the background of an element to any contextual class. Anchor components will darken on hover, just like the text classes.</p>
- <p class="bg-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
- <p class="bg-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
- <p class="bg-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
- <p class="bg-warning">Etiam porta sem malesuada magna mollis euismod.</p>
- <p class="bg-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
- <div class="mrgn-tp-lg">
-  <pre><code>&lt;p class="bg-primary"&gt;...&lt;/p&gt;
-&lt;p class="bg-success"&gt;...&lt;/p&gt;
-&lt;p class="bg-info"&gt;...&lt;/p&gt;
-&lt;p class="bg-warning"&gt;...&lt;/p&gt;
-&lt;p class="bg-danger"&gt;...&lt;/p&gt;
-</code></pre>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <h2 class="page-header" id="message">Coloured message boxes</h2>
- <p>For message colour options, refer to:</p>
- <ul>
-  <li> <a href="panels-en.html#colour">Panels: Add colour</a></li>
-  <li> <a href="alerts-en.html#options">Alerts: Alert options</a></li>
- </ul>
- <h2 class="page-header" id="tables">Coloured tables</h2>
- <p>For table colour options, refer to <a href="tables-en.html#tables-contextual-classes">Tables: Coloured cells</a></p>
- <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
-</div>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#default">Default appearance </a></li>
+					<li><a href="#text">Coloured text</a></li>
+					<li><a href="#background">Coloured backgrounds</a></li>
+					<li><a href="#message">Coloured message boxes</a></li>
+					<li><a href="#tables">Coloured tables</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4 pull-right">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
+</section>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="default">Default appearance</h2>
+	<p>(Info goes here)</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="text">Coloured text</h2>
+	<p>Use font colours to highlight content and / or create information blocks that focus the user's attention.</p>
+	<p class="text-muted">This text is styled with <code>text-muted</code>.</p>
+	<p class="text-primary">This text is styled with <code>text-primary</code>.</p>
+	<p class="text-success">This text is styled with <code>text-success</code>.</p>
+	<p class="text-info">This text is styled with <code>text-info</code>.</p>
+	<p class="text-warning">This text is styled with <code>text-warning</code>.</p>
+	<p class="text-danger">This text is styled with <code>text-dangeer</code>.</p>
+
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;p class=&quot;text-muted&quot;&gt;This text is styled with &lt;code&gt;text-muted&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;text-primary&quot;&gt;This text is styled with &lt;code&gt;text-primary&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;text-success&quot;&gt;This text is styled with &lt;code&gt;text-success&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;text-info&quot;&gt;This text is styled with &lt;code&gt;text-info&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;text-warning&quot;&gt;This text is styled with &lt;code&gt;text-warning&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;text-danger&quot;&gt;This text is styled with &lt;code&gt;text-dangeer&lt;/code&gt;.&lt;/p&gt;&lt;/code&gt;&lt;/pre&gt;
+	</div>
+
+	<section class="alert alert-info mrgn-tp-lg">
+		<h3>Dealing with specificity</h3>
+		<p>Sometimes emphasis classes cannot be applied due to the specificity of another selector. In most cases, a sufficient workaround is to wrap your text in a <code>&lt;span&gt;</code> with the class.</p>
+	</section>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="background">Coloured backgrounds</h2>
+	<p>Similar to the contextual text color classes, easily set the background of an element to any contextual class. Anchor components will darken on hover, just like the text classes.</p>
+	<p class="bg-primary">This text is styled with <code>bg-primary</code>.</p>
+	<p class="bg-success">This text is styled with <code>bg-success</code>.</p>
+	<p class="bg-info">This text is styled with <code>bg-info</code>.</p>
+	<p class="bg-warning">This text is styled with <code>bg-warning</code>.</p>
+	<p class="bg-danger">This text is styled with <code>bg-danger</code>.</p>
+
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;p class=&quot;bg-primary&quot;&gt;This text is styled with &lt;code&gt;bg-primary&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;bg-success&quot;&gt;This text is styled with &lt;code&gt;bg-success&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;bg-info&quot;&gt;This text is styled with &lt;code&gt;bg-info&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;bg-warning&quot;&gt;This text is styled with &lt;code&gt;bg-warning&lt;/code&gt;.&lt;/p&gt;
+&lt;p class=&quot;bg-danger&quot;&gt;This text is styled with &lt;code&gt;bg-danger&lt;/code&gt;.&lt;/p&gt;</code></pre>
+	</div>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="message">Coloured message boxes</h2>
+	<p>For message colour options, refer to:</p>
+	<ul>
+		<li><a href="panels-en.html#colour">Panels: Add colour</a></li>
+		<li><a href="alerts-en.html#options">Alerts: Alert options</a></li>
+	</ul>
+</section>
+
+<section>
+	<h2 class="page-header" id="tables">Coloured tables</h2>
+	<p>For table colour options, refer to <a href="tables-en.html#tables-contextual-classes">Tables: Coloured cells</a></p>
+	<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+</section>
