--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -14,4 +14,4 @@
 	"dateModified": "2014-02-27"
 }
 ---
-<meta http-equiv="refresh" content="0;url=v3/index.html">
+<meta http-equiv="refresh" content="0;url=v4/index-en.html">
