--- a/site/pages/v4/design/sizing-en.hbs
+++ b/site/pages/v4/design/sizing-en.hbs
@@ -4,120 +4,159 @@
 	"language": "en",
 	"altLangPrefix": "sizing",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-09"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8 mrgn-bttm-lg">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#default">Default sizing </a></li>
-      <li><a href="#text">Change text size</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4 pull-right mrgn-bttm-lg">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related</h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="buttons-en.html#buttons-sizes">Button sizing<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="forms-en.html#forms-control-sizes">Form sizing<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="pagination-en.html#sizing">Pagination  sizing<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="tables-en.html#tables-condensed">Table  sizing<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="wells-en.html#sizing">Well  sizing<span class="wb-inv"> - Design guide</span></a></li>
-    </ul>
-   </div>
-  </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
-   <h2 class="page-header" id="description">Description</h2>
-   <p>(Info goes here) </p>
-   <h2 class="page-header" id="default">Default sizing </h2>
-   <p>WET's global default <code>font-size</code> is <strong>16px</strong>, with a <code>line-height</code> of <strong>1.428</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of half their computed line-height (10px by default).</p>
-   <div class="mrgn-tp-lg">
-    <pre><code>&lt;p&gt;...&lt;/p&gt;</code></pre>
-   </div>
-   <h2 class="page-header" id="text">Text text size </h2>
-   <p>Increase or decrease the size of text.</p>
-   <table class="table">
-    <thead>
-     <tr>
-      <th>Default sizing </th>
-      <th>CSS class </th>
-      <th>New sizing </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td><p>Paragraph</p></td>
-      <td><p><code>.small</code></p>
-       <p><code>&lt;small&gt;</code></p></td>
-      <td><p class="small">Small paragraph </p>
-       <pre><code>&lt;p class=&quot;small&quot;&gt;Small paragraph &lt;/p&gt;</code></pre>
-       <pre><code>&lt;small&gt;Small paragraph&lt;/small&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><p>Paragraph</p></td>
-      <td><code>.lead</code></td>
-      <td><p class="lead">Lead paragraph</p>
-       <pre><code>&lt;p class=&quot;lead&quot;&gt;Lead paragraph &lt;/p&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h1>Heading 1 </h1></td>
-      <td><code>.h6</code></td>
-      <td><h1 class="h6">Heading 1</h1>
-       <pre><code>&lt;h1 class=&quot;h6&quot;&gt;Heading 1&lt;/h1&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h2>Heading 2 </h2></td>
-      <td><code>.h5</code></td>
-      <td><h2 class="h5">Heading 2</h2>
-       <pre><code>&lt;h2 class=&quot;h5&quot;&gt;Heading 2&lt;/h2&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h3>Heading 3 </h3></td>
-      <td><code>.h4</code></td>
-      <td><h3 class="h4">Heading 3 </h3>
-       <pre><code>&lt;h3 class=&quot;h4&quot;&gt;Heading 3&lt;/h3&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h4>Heading 4 </h4></td>
-      <td><code>.h3</code></td>
-      <td><h4 class="h3">Heading 4 </h4>
-       <pre><code>&lt;h4 class=&quot;h3&quot;&gt;Heading 4&lt;/h4&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h5>Heading 5 </h5></td>
-      <td><code>.h2</code></td>
-      <td><h5 class="h2">Heading 5 </h5>
-       <pre><code>&lt;h5 class=&quot;h2&quot;&gt;Heading 5&lt;/h5&gt;</code></pre></td>
-     </tr>
-     <tr>
-      <td><h6>Heading 6 </h6></td>
-      <td><code>.h1</code></td>
-      <td><h6 class="h1">Heading 6 </h6>
-       <pre><code>&lt;h6 class=&quot;h1&quot;&gt;Heading 6&lt;/h6&gt;</code></pre></td>
-     </tr>
-    </tbody>
-   </table>
-   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-     <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-     <p>(Info goes here)</p>
-    </div>
-    <div class="col-md-6 brdr-lft">
-     <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-     <p>(Info goes here)</p>
-    </div>
-   </div>
-   <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
-  </div>
- </div>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8 mrgn-bttm-lg">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#default">Default sizing </a></li>
+					<li><a href="#text">Change text size</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4 pull-right mrgn-bttm-lg">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="buttons-en.html#buttons-sizes">Button sizing<span class="wb-inv"> - Design guide</span></a></li>
+					<li><a href="forms-en.html#forms-control-sizes">Form sizing<span class="wb-inv"> - Design guide</span></a></li>
+					<li><a href="pagination-en.html#sizing">Pagination  sizing<span class="wb-inv"> - Design guide</span></a></li>
+					<li><a href="tables-en.html#tables-condensed">Table  sizing<span class="wb-inv"> - Design guide</span></a></li>
+					<li><a href="wells-en.html#sizing">Well  sizing<span class="wb-inv"> - Design guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>(Info goes here)</p>
+</section>
+ 
+<section>
+	<h2 class="page-header" id="default">Default sizing</h2>
+	<p>WET's global default <code>font-size</code> is <strong>16px</strong>, with a <code>line-height</code> of <strong>1.428</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of half their computed line-height (10px by default).</p>
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;p&gt;...&lt;/p&gt;</code></pre>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="text">Text size</h2>
+	<p>Increase or decrease the size of text.</p>
+
+	<section class="alert alert-danger">
+		<h3 class="h4">Use appropriate semantic markup</h3>
+		<p>Changes in text size can convey information so make sure the semantic markup supports what is being conveyed visually.</p>
+	</section>
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Default sizing</th>
+				<th>CSS class</th>
+				<th>New sizing</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><p>Paragraph</p></td>
+				<td>
+					<p><code>.small</code></p>
+					<p><code>&lt;small&gt;</code></p>
+				</td>
+				<td>
+					<p class="small">Small paragraph</p>
+					<pre><code>&lt;p class=&quot;small&quot;&gt;Small paragraph &lt;/p&gt;</code></pre>
+					<pre><code>&lt;small&gt;Small paragraph&lt;/small&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><p>Paragraph</p></td>
+				<td><code>.lead</code></td>
+				<td>
+					<p class="lead">Lead paragraph</p>
+					<pre><code>&lt;p class=&quot;lead&quot;&gt;Lead paragraph &lt;/p&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><h1>Heading 1</h1></td>
+				<td><code>.h6</code></td>
+				<td>
+					<h1 class="h6">Heading 1</h1>
+					<pre><code>&lt;h1 class=&quot;h6&quot;&gt;Heading 1&lt;/h1&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<h2>Heading 2</h2>
+				</td>
+				<td><code>.h5</code></td>
+				<td>
+					<h2 class="h5">Heading 2</h2>
+					<pre><code>&lt;h2 class=&quot;h5&quot;&gt;Heading 2&lt;/h2&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><h3>Heading 3</h3></td>
+				<td><code>.h4</code></td>
+				<td>
+					<h3 class="h4">Heading 3</h3>
+					<pre><code>&lt;h3 class=&quot;h4&quot;&gt;Heading 3&lt;/h3&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><h4>Heading 4</h4></td>
+				<td><code>.h3</code></td>
+				<td>
+					<h4 class="h3">Heading 4 </h4>
+					<pre><code>&lt;h4 class=&quot;h3&quot;&gt;Heading 4&lt;/h4&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><h5>Heading 5</h5></td>
+				<td><code>.h2</code></td>
+				<td>
+					<h5 class="h2">Heading 5 </h5>
+					<pre><code>&lt;h5 class=&quot;h2&quot;&gt;Heading 5&lt;/h5&gt;</code></pre>
+				</td>
+			</tr>
+			<tr>
+				<td><h6>Heading 6</h6></td>
+				<td><code>.h1</code></td>
+				<td>
+					<h6 class="h1">Heading 6 </h6>
+					<pre><code>&lt;h6 class=&quot;h1&quot;&gt;Heading 6&lt;/h6&gt;</code></pre>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
